--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <img src="Images/Rectangle 7.png" alt="" />
           <img src="Images/Rectangle 9.png" alt="" />
         </div>
-        <div class="box-img3">
+        <div class="new-box-img3">
           <img src="Images/Rectangle 11.png" alt="" />
           <img src="Images/Rectangle 10.png" alt="" />
         </div>
